fixed Slideshow close-btn z-index

--- a/src/components/Slideshow/Slideshow.css
+++ b/src/components/Slideshow/Slideshow.css
@@ -21,8 +21,9 @@
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 2%;
+    right: 2%;
+    z-index: 6;
 }
 
 .slideshow__slider{
